apps/production/homepage/route-patch.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-route
  namespace: homepage
spec:
  hostnames:
    - fanen.dk
